fix: keep layout of notifications after updates

This ensures that the layout of notifications is kept as intended.

Bug: 901045
Change-Id: I0dcc92464a5751cd61ff7552824c57798aa73661
Reviewed-on: https://chromium-review.googlesource.com/c/1320169
Commit-Queue: Richard Knoll <knollr@chromium.org>
Reviewed-by: Justin DeWitt <dewittj@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609356}
Former-commit-id: 72954484ef1248e6f95e82f30c3be039a1c77b88